@@ -1,8 +1,10 @@
-CHANGES.txt - 02/11/2003
+CHANGES.txt - 02/12/2003
 ------------------------
 
 CHANGES IN CUPS V1.1.19
 
+	- The socket backend could report the wrong number of
+	  backchannel bytes if an error occurred on the link.
 	- The cups-polld program now only sleeps after getting
 	  all printers and classes.  This allows for longer
 	  intervals without excessive delays before classes show
